5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1638_2449.log
== TEST (2019-04-11 10:12:48) 
-- CODE:
a= float(input("qual seu coeficiente a? "))
b= float(input("qual seu coeficiente b? "))
c= float(input("qual seu coeficiente c? "))
d= float(input("qual seu coeficiente d? "))
e= float(input("qual seu coeficiente e? "))
f= float(input("qual seu coeficiente f? "))

x= (c*e-b*f)/(a*e-b*d)
y= (a*f-c*d)/(a*e-b*d)
print (x,y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x= (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:14:54) 
-- CODE:
a= float(input("qual seu coeficiente a? "))
b= float(input("qual seu coeficiente b? "))
c= float(input("qual seu coeficiente c? "))
d= float(input("qual seu coeficiente d? "))
e= float(input("qual seu coeficiente e? "))
f= float(input("qual seu coeficiente f? "))

x= (c*e-b*f)/(a*e-b*d)
y= (a*f-c*d)/(a*e-b*d)
if (a*e-b*d!=0)
	msg= x,y
else:
	msg= "Nao tem solucao"
print(msg)
-- ERROR:
File "XXXX", line 10
    if (a*e-b*d!=0)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:15:23) 
-- CODE:
a= float(input("qual seu coeficiente a? "))
b= float(input("qual seu coeficiente b? "))
c= float(input("qual seu coeficiente c? "))
d= float(input("qual seu coeficiente d? "))
e= float(input("qual seu coeficiente e? "))
f= float(input("qual seu coeficiente f? "))

x= (c*e-b*f)/(a*e-b*d)
y= (a*f-c*d)/(a*e-b*d)
if (a*e - b*d != 0)
	msg= x,y
else:
	msg= "Nao tem solucao"
print(msg)
-- ERROR:
File "XXXX", line 10
    if (a*e - b*d != 0)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:16:13) 
-- CODE:
a= float(input("qual seu coeficiente a? "))
b= float(input("qual seu coeficiente b? "))
c= float(input("qual seu coeficiente c? "))
d= float(input("qual seu coeficiente d? "))
e= float(input("qual seu coeficiente e? "))
f= float(input("qual seu coeficiente f? "))

x= (c*e-b*f)/(a*e-b*d)
y= (a*f-c*d)/(a*e-b*d)
if (a*e - b*d != 0)
	print(x,y)
else:
	print("Nao tem solucao")
-- ERROR:
File "XXXX", line 10
    if (a*e - b*d != 0)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:16:50) 
-- CODE:
a= float(input("qual seu coeficiente a? "))
b= float(input("qual seu coeficiente b? "))
c= float(input("qual seu coeficiente c? "))
d= float(input("qual seu coeficiente d? "))
e= float(input("qual seu coeficiente e? "))
f= float(input("qual seu coeficiente f? "))
h= (a*e-b*d)
x= (c*e-b*f)/h
y= (a*f-c*d)/h
if (h!= 0)
	print(x,y)
else:
	print("Nao tem solucao")
-- ERROR:
File "XXXX", line 10
    if (h!= 0)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:17:07) 
-- CODE:
a= float(input("qual seu coeficiente a? "))
b= float(input("qual seu coeficiente b? "))
c= float(input("qual seu coeficiente c? "))
d= float(input("qual seu coeficiente d? "))
e= float(input("qual seu coeficiente e? "))
f= float(input("qual seu coeficiente f? "))
h= (a*e-b*d)
x= (c*e-b*f)/h
y= (a*f-c*d)/h
print(x,y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x= (c*e-b*f)/h
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:17:17) 
-- CODE:
a= float(input("qual seu coeficiente a? "))
b= float(input("qual seu coeficiente b? "))
c= float(input("qual seu coeficiente c? "))
d= float(input("qual seu coeficiente d? "))
e= float(input("qual seu coeficiente e? "))
f= float(input("qual seu coeficiente f? "))
h= (a*e-b*d)
x= (c*e-b*f)/h
y= (a*f-c*d)/h
print(x,y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x= (c*e-b*f)/h
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:18:01) 
-- CODE:
a= float(input("qual seu coeficiente a? "))
b= float(input("qual seu coeficiente b? "))
c= float(input("qual seu coeficiente c? "))
d= float(input("qual seu coeficiente d? "))
e= float(input("qual seu coeficiente e? "))
f= float(input("qual seu coeficiente f? "))
h= (a*e-b*d)
x= (c*e-b*f)/h
y= (a*f-c*d)/h
if (x and y != 0):
	print(x,y)
else:
	print("Nao tem solucao")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x= (c*e-b*f)/h
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:18:07) 
-- CODE:
a= float(input("qual seu coeficiente a? "))
b= float(input("qual seu coeficiente b? "))
c= float(input("qual seu coeficiente c? "))
d= float(input("qual seu coeficiente d? "))
e= float(input("qual seu coeficiente e? "))
f= float(input("qual seu coeficiente f? "))
h= (a*e-b*d)
x= (c*e-b*f)/h
y= (a*f-c*d)/h
if (x and y != 0):
	print(x,y)
else:
	print("Nao tem solucao")

-- EXECUTION TIME:
0.147896
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 8, in <module>
    x= (c*e-b*f)/h
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:20:50) 
-- CODE:
a= float(input("qual seu coeficiente a? "))
b= float(input("qual seu coeficiente b? "))
c= float(input("qual seu coeficiente c? "))
d= float(input("qual seu coeficiente d? "))
e= float(input("qual seu coeficiente e? "))
f= float(input("qual seu coeficiente f? "))
h= (a*e-b*d)

if (x= (c*e-b*f)/h and y= (a*f-c*d)/h !=0):
	print(x,y)
else:
	print("Nao tem solucao")

-- ERROR:
File "XXXX", line 9
    if (x= (c*e-b*f)/h and y= (a*f-c*d)/h !=0):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:23:09) 
-- CODE:
a= float(input("qual seu coeficiente a? "))
b= float(input("qual seu coeficiente b? "))
c= float(input("qual seu coeficiente c? "))
d= float(input("qual seu coeficiente d? "))
e= float(input("qual seu coeficiente e? "))
f= float(input("qual seu coeficiente f? "))
h= (a*e-b*d)
x= (c*e-b*f)/h 
y= (a*f-c*d)/h 
if ( x and y !=0)
	print(x,y)
else:
	print("Nao tem solucao")

-- ERROR:
File "XXXX", line 10
    if ( x and y !=0)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:23:15) 
-- CODE:
a= float(input("qual seu coeficiente a? "))
b= float(input("qual seu coeficiente b? "))
c= float(input("qual seu coeficiente c? "))
d= float(input("qual seu coeficiente d? "))
e= float(input("qual seu coeficiente e? "))
f= float(input("qual seu coeficiente f? "))
h= (a*e-b*d)
x= (c*e-b*f)/h 
y= (a*f-c*d)/h 
if ( x and y !=0):
	print(x,y)
else:
	print("Nao tem solucao")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x= (c*e-b*f)/h 
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:23:21) 
-- CODE:
a= float(input("qual seu coeficiente a? "))
b= float(input("qual seu coeficiente b? "))
c= float(input("qual seu coeficiente c? "))
d= float(input("qual seu coeficiente d? "))
e= float(input("qual seu coeficiente e? "))
f= float(input("qual seu coeficiente f? "))
h= (a*e-b*d)
x= (c*e-b*f)/h 
y= (a*f-c*d)/h 
if ( x and y !=0):
	print(x,y)
else:
	print("Nao tem solucao")

-- EXECUTION TIME:
0.169936
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 8, in <module>
    x= (c*e-b*f)/h 
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:23:52) 
-- CODE:
a= float(input("qual seu coeficiente a? "))
b= float(input("qual seu coeficiente b? "))
c= float(input("qual seu coeficiente c? "))
d= float(input("qual seu coeficiente d? "))
e= float(input("qual seu coeficiente e? "))
f= float(input("qual seu coeficiente f? "))
h= (a*e-b*d)

if (x= (c*e-b*f)/h and y= (a*f-c*d)/h ):
	print(x,y)
else:
	print("Nao tem solucao")

-- EXECUTION TIME:
0.142794
-- ERROR:
  File "/home/codebench/codes/1638/2449/main.py", line 9
    if (x= (c*e-b*f)/h and y= (a*f-c*d)/h ):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:23:53) 
-- CODE:
a= float(input("qual seu coeficiente a? "))
b= float(input("qual seu coeficiente b? "))
c= float(input("qual seu coeficiente c? "))
d= float(input("qual seu coeficiente d? "))
e= float(input("qual seu coeficiente e? "))
f= float(input("qual seu coeficiente f? "))
h= (a*e-b*d)

if (x= (c*e-b*f)/h and y= (a*f-c*d)/h ):
	print(x,y)
else:
	print("Nao tem solucao")

-- ERROR:
File "XXXX", line 9
    if (x= (c*e-b*f)/h and y= (a*f-c*d)/h ):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:24:04) 
-- CODE:
a= float(input("qual seu coeficiente a? "))
b= float(input("qual seu coeficiente b? "))
c= float(input("qual seu coeficiente c? "))
d= float(input("qual seu coeficiente d? "))
e= float(input("qual seu coeficiente e? "))
f= float(input("qual seu coeficiente f? "))
h= (a*e-b*d)

if (x= (c*e-b*f)/h and y= (a*f-c*d)/h !=0):
	print(x,y)
else:
	print("Nao tem solucao")

-- ERROR:
File "XXXX", line 9
    if (x= (c*e-b*f)/h and y= (a*f-c*d)/h !=0):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:26:06) 
-- CODE:
a= float(input("qual seu coeficiente a? "))
b= float(input("qual seu coeficiente b? "))
c= float(input("qual seu coeficiente c? "))
d= float(input("qual seu coeficiente d? "))
e= float(input("qual seu coeficiente e? "))
f= float(input("qual seu coeficiente f? "))
h= (a*e-b*d)
x= (c*e-b*f)/h 
y= (a*f-c*d)/h 
if (x and y !=0):
	print(x,y)
else:
	print("Nao tem solucao")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x= (c*e-b*f)/h 
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:31:01) 
-- CODE:
a= float(input("qual seu coeficiente a? "))
b= float(input("qual seu coeficiente b? "))
c= float(input("qual seu coeficiente c? "))
d= float(input("qual seu coeficiente d? "))
e= float(input("qual seu coeficiente e? "))
f= float(input("qual seu coeficiente f? "))
h= (a*e-b*d)
x= (c*e-b*f)/h 
y= (a*f-c*d)/h 
if (h != 0)
	print(x,y)
else:
	print("Nao tem solucao")

-- ERROR:
File "XXXX", line 10
    if (h != 0)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:31:15) 
-- CODE:
a= float(input("qual seu coeficiente a? "))
b= float(input("qual seu coeficiente b? "))
c= float(input("qual seu coeficiente c? "))
d= float(input("qual seu coeficiente d? "))
e= float(input("qual seu coeficiente e? "))
f= float(input("qual seu coeficiente f? "))
h= (a*e-b*d)
x= (c*e-b*f)/h 
y= (a*f-c*d)/h 
if (h != 0):
	print(x,y)
else:
	print("Nao tem solucao")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x= (c*e-b*f)/h 
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:31:21) 
-- CODE:
a= float(input("qual seu coeficiente a? "))
b= float(input("qual seu coeficiente b? "))
c= float(input("qual seu coeficiente c? "))
d= float(input("qual seu coeficiente d? "))
e= float(input("qual seu coeficiente e? "))
f= float(input("qual seu coeficiente f? "))
h= (a*e-b*d)
x= (c*e-b*f)/h 
y= (a*f-c*d)/h 
if (h != 0):
	print(x,y)
else:
	print("Nao tem solucao")

-- EXECUTION TIME:
0.162582
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 8, in <module>
    x= (c*e-b*f)/h 
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:32:33) 
-- CODE:
a= float(input("qual seu coeficiente a? "))
b= float(input("qual seu coeficiente b? "))
c= float(input("qual seu coeficiente c? "))
d= float(input("qual seu coeficiente d? "))
e= float(input("qual seu coeficiente e? "))
f= float(input("qual seu coeficiente f? "))
h= (a*e-b*d)
x= (c*e-b*f)/h 
y= (a*f-c*d)/h 
if (h != 0):
	print(x= (c*e-b*f)/h, y= (a*f-c*d)/h)
else:
	print("Nao tem solucao")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x= (c*e-b*f)/h 
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:32:48) 
-- CODE:
a= float(input("qual seu coeficiente a? "))
b= float(input("qual seu coeficiente b? "))
c= float(input("qual seu coeficiente c? "))
d= float(input("qual seu coeficiente d? "))
e= float(input("qual seu coeficiente e? "))
f= float(input("qual seu coeficiente f? "))
h= (a*e-b*d)
x= (c*e-b*f)/h 
y= (a*f-c*d)/h 
if (h != 0):
	print((c*e-b*f)/h, (a*f-c*d)/h)
else:
	print("Nao tem solucao")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x= (c*e-b*f)/h 
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:32:52) 
-- CODE:
a= float(input("qual seu coeficiente a? "))
b= float(input("qual seu coeficiente b? "))
c= float(input("qual seu coeficiente c? "))
d= float(input("qual seu coeficiente d? "))
e= float(input("qual seu coeficiente e? "))
f= float(input("qual seu coeficiente f? "))
h= (a*e-b*d)
x= (c*e-b*f)/h 
y= (a*f-c*d)/h 
if (h != 0):
	print((c*e-b*f)/h, (a*f-c*d)/h)
else:
	print("Nao tem solucao")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x= (c*e-b*f)/h 
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:32:57) 
-- CODE:
a= float(input("qual seu coeficiente a? "))
b= float(input("qual seu coeficiente b? "))
c= float(input("qual seu coeficiente c? "))
d= float(input("qual seu coeficiente d? "))
e= float(input("qual seu coeficiente e? "))
f= float(input("qual seu coeficiente f? "))
h= (a*e-b*d)
x= (c*e-b*f)/h 
y= (a*f-c*d)/h 
if (h != 0):
	print((c*e-b*f)/h, (a*f-c*d)/h)
else:
	print("Nao tem solucao")

-- EXECUTION TIME:
0.138768
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 8, in <module>
    x= (c*e-b*f)/h 
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:34:37) 
-- CODE:
a= float(input("qual seu coeficiente a? "))
b= float(input("qual seu coeficiente b? "))
c= float(input("qual seu coeficiente c? "))
d= float(input("qual seu coeficiente d? "))
e= float(input("qual seu coeficiente e? "))
f= float(input("qual seu coeficiente f? "))
h= (a*e-b*d)

if (h != 0):
	print((c*e-b*f)/h, (a*f-c*d)/h)
else:
	print("Nao tem solucao")

-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:34:41) 
-- CODE:
a= float(input("qual seu coeficiente a? "))
b= float(input("qual seu coeficiente b? "))
c= float(input("qual seu coeficiente c? "))
d= float(input("qual seu coeficiente d? "))
e= float(input("qual seu coeficiente e? "))
f= float(input("qual seu coeficiente f? "))
h= (a*e-b*d)

if (h != 0):
	print((c*e-b*f)/h, (a*f-c*d)/h)
else:
	print("Nao tem solucao")

-- EXECUTION TIME:
0.221413
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265 1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205 1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
